# noobuster

./: Cargo.toml  README.md  wordlist.txt
src/: error.rs  main.rs
